...
                    android:text="Filtrer"
                    android:backgroundTint="@color/grey"
                    android:textColor="@color/black"
                    android:layout_marginEnd="12dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ajouter_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_dolibarr"
                    android:textSize="25sp"
                    android:text="+"/>
            </LinearLayout>
...
